--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "changelog": "auto-changelog --unreleased"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.25",
@@ -61,6 +62,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.34.0",
     "@types/react": "~19.0.10",
+    "auto-changelog": "^2.5.0",
     "eslint": "^9.34.0",
     "eslint-config-expo": "~9.2.0",
     "eslint-plugin-react": "^7.37.5",
