--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "grocery-buddy",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/grocery-buddy-ios.png",
     "scheme": "grocerybuddy",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -17,25 +17,25 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/grocery-buddy-ios.png",
+        "backgroundColor": "#4CAF50"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/grocery-buddy-ios.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/grocery-buddy-ios.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#4CAF50"
         }
       ],
       "expo-secure-store",
